[project]
name = "loadlorawithtags"
description = "Nodes:LoadLoraWithTags. Save/Load trigger words for loras from a json and auto fetch them on civitai if they are missing."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Extraltodeus/LoadLoraWithTags"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "extraltodeus"
DisplayName = "LoadLoraWithTags"
Icon = ""
